glibc (2.30-0experimental1) UNRELEASED; urgency=medium

  * patches/hurd-i386/tg-sendmsg-SCM_RIGHTS.diff: Rename to
    git-sendmsg-SCM_RIGHTS.diff.
  * patches/hurd-i386/tg-context_functions.diff: Rename to
    git-context_functions.diff.
  * patches/hurd-i386/tg-hurdsig-fixes.diff: Rename to git-hurdsig-fixes.diff.
  * patches/hurd-i386/tg-hurdsig-global-dispositions.diff: Rename to
    git-hurdsig-global-dispositions.diff.
  * patches/hurd-i386/local-hurdsig-globaldisp-version.diff: Rename to
    git-hurdsig-globaldisp-version.diff.
  * patches/hurd-i386/tg-hurdsig-fixes-2.diff: Rename to
    git-hurdsig-fixes-2.diff.
  * patches/hurd-i386/tg-hurdsig-boot-fix.diff: Rename to
    git-hurdsig-boot-fix.diff.
  * patches/hurd-i386/libpthread_sigs.diff: Rename to libpthread_sigs.diff.
  * patches/hurd-i386/local-hurd_sigstate-PLT.diff: Rename to
    git-hurd_sigstate-PLT.diff.

 -- Samuel Thibault <sthibault@debian.org>  Sun, 29 Dec 2019 16:37:16 +0100

glibc (2.30-0experimental0) experimental; urgency=medium

  [ Adam Conrad ]
  * New upstream release 2.30, with git updates up to 2019-09-08:
    - debian/symbols.wildcard: Add 2.30, and debian/control: Regenerate.
    - debian/patches/any/git-libio-stdout-putc.diff: Upstreamed.
    - debian/patches/any/git-pexpect-pretty-printers.diff: Upstreamed.
    - debian/patches/any/git-socket-constants.diff: Upstreamed.
    - debian/patches/any/local-tst-eintr1-eagain.diff: Obsolete.
    - debian/patches/hurd-i386/git-renameat2.diff: Upstreamed.
    - debian/patches/any/submitted-resolv-unaligned.diff: Rebased.
    - debian/patches/hurd-i386/tg-hurdsig-SA_SIGINFO.diff: Rebased.
    - debian/patches/hurd-i386/tg-hurdsig-fixes-2.diff: Rebased.
    - debian/patches/hurd-i386/tg-hurdsig-fixes.diff: Rebased.
    - debian/patches/hurd-i386/tg-hurdsig-global-dispositions.diff: Rebased.
    - debian/patches/hurd-i386/tg-io_select_timeout.diff: Rebased.
    - debian/patches/hurd-i386/tg-thread-cancel.diff: Rebased.