@@ -930,8 +930,8 @@ during/around the time __proc_dostop executes.
 --- a/sysdeps/mach/hurd/i386/trampoline.c
 +++ b/sysdeps/mach/hurd/i386/trampoline.c
 @@ -74,7 +74,11 @@
-      interrupted RPC frame.  */
-   state->basic.esp = state->basic.uesp;
+      the SP on sigreturn.  */
+     state->basic.uesp = state->basic.ecx;
  
 -  if ((ss->actions[signo].sa_flags & SA_ONSTACK)
 +  /* XXX what if handler != action->handler (for instance, if a signal
