@@ -6,7 +6,7 @@ glibc (2.30-0experimental1) UNRELEASED; urgency=medium
     git-context_functions.diff.
   * patches/hurd-i386/tg-hurdsig-fixes.diff: Rename to git-hurdsig-fixes.diff.
   * patches/hurd-i386/tg-hurdsig-global-dispositions.diff: Rename to
-    git-hurdsig-global-dispositions.diff.
+    git-hurdsig-global-dispositions.diff, refresh.
   * patches/hurd-i386/local-hurdsig-globaldisp-version.diff: Rename to
     git-hurdsig-globaldisp-version.diff.
   * patches/hurd-i386/tg-hurdsig-fixes-2.diff: Rename to
@@ -16,6 +16,7 @@ glibc (2.30-0experimental1) UNRELEASED; urgency=medium
   * patches/hurd-i386/libpthread_sigs.diff: Rename to libpthread_sigs.diff.
   * patches/hurd-i386/local-hurd_sigstate-PLT.diff: Rename to
     git-hurd_sigstate-PLT.diff.
+  * patches/hurd-i386/tg-hurdsig-SA_SIGINFO.diff: Refresh.
 
  -- Samuel Thibault <sthibault@debian.org>  Sun, 29 Dec 2019 16:37:16 +0100
 
